--- a/stable/latest/book/project_setup.html
+++ b/stable/latest/book/project_setup.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/style.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -75,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html" class="active"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="gobject_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gobject_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="gobject_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="gobject_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="gobject_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="gobject_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="interface_builder.html"><strong aria-hidden="true">10.</strong> Interface Builder</a></li><li class="chapter-item expanded "><a href="todo_app_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_app_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">14.</strong> CSS</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">15.</strong> Resources</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">16.</strong> Internationalization</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">17.</strong> Accessibility</div></li><li class="chapter-item expanded affix "><li class="part-title">Useful Libraries</li><li class="chapter-item expanded "><div><strong aria-hidden="true">18.</strong> GStreamer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">19.</strong> Adwaita</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">20.</strong> SourceView</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">21.</strong> Zbus and Ashpd</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">22.</strong> Librsvg</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">23.</strong> Relm4</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html" class="active"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="gobject_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gobject_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="gobject_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="gobject_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="gobject_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="gobject_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="composite_templates.html"><strong aria-hidden="true">10.</strong> Composite Templates</a></li><li class="chapter-item expanded "><a href="todo_app_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_app_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><a href="css.html"><strong aria-hidden="true">14.</strong> CSS</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -138,24 +139,19 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="project-setup"><a class="header" href="#project-setup">Project Setup</a></h1>
-<p>There are two recommended ways to set up your workstation in order to develop <code>gtk-rs</code> applications.
-Let us go through them one by one.</p>
-<h2 id="cargo"><a class="header" href="#cargo">Cargo</a></h2>
-<p><a href="https://doc.rust-lang.org/cargo/index.html">Cargo</a> is Rust's build system and package manager.
-If following the book is all you care about, using only Cargo will work fine for you.</p>
-<p>Let us begin by installing all necessary tools.
+<p>Let's begin by installing all necessary tools.
 First, follow the instructions on the <a href="https://www.gtk.org/docs/installations/">GTK website</a> in order to install GTK 4.
 Then install Rust with <a href="https://rustup.rs/">rustup</a>.</p>
 <p>Now, create a new project by executing:</p>
 <pre><code class="language-bash">cargo new my-gtk-app
 </code></pre>
-<p>Add the following lines to your dependencies in <code>Cargo.toml</code>, where <code>X.X</code> should be replaced with the most up-to-date version of the <a href="https://crates.io/crates/gtk4">gtk4 crate</a>.</p>
+<p>Add the following line to your dependencies in <code>Cargo.toml</code>, where <code>X.X</code> should be replaced with the most up-to-date version of the <a href="https://crates.io/crates/gtk4">gtk4 crate</a>.</p>
 <pre><code class="language-toml">gtk = { version = &quot;X.X&quot;, package = &quot;gtk4&quot; }
 </code></pre>
 <blockquote>
-<p>Per default <code>gtk4-rs</code> is compatible with all GTK 4 releases.
-If you want to use functionality that has been added to later releases, you have to specify this as a feature.
-If you want to use functionality of GTK 4.6, you would add the following to your gtk dependency in <code>Cargo.toml</code>.</p>
+<p>To use functionality that has been added to later releases, you have to specify this as a <a href="https://doc.rust-lang.org/cargo/reference/features.html">feature</a>.
+Per default <code>gtk4-rs</code> is compatible with all GTK 4 releases.
+For example, if you want to use functionality that was introduced with GTK 4.6, you would add the following to your <code>gtk</code> dependency in <code>Cargo.toml</code>.</p>
 <pre><code class="language-toml">gtk = { version = &quot;X.X&quot;, package = &quot;gtk4&quot;, features = [&quot;v4_6&quot;]}
 </code></pre>
 <p>This will only work if your available GTK version is indeed &gt;= 4.6.
@@ -166,30 +162,6 @@ You can get the version by executing the following command:</p>
 <p>Now, you can run your application by executing:</p>
 <pre><code class="language-bash">cargo run
 </code></pre>
-<h2 id="cargo--meson"><a class="header" href="#cargo--meson">Cargo + Meson</a></h2>
-<p>Cargo is <em>almost</em> enough, but it is not well suited for handling resources such as icons or UI definition files.
-That is why we recommend to use <a href="https://mesonbuild.com/">Meson</a> on top of it.
-It is cross-platform, and its syntax is very readable.
-Meson takes care of</p>
-<ul>
-<li>translations,</li>
-<li>building and installing <a href="resources.html">resources</a> as well as</li>
-<li>installing auxiliary files such as icons and <a href="settings.html">settings schemas</a>.</li>
-</ul>
-<p>Here as well, you first follow the instructions on the <a href="https://www.gtk.org/docs/installations/">GTK website</a> in order to install GTK 4.
-Then install Rust with <a href="https://rustup.rs/">rustup</a>.
-Finally, install Meson by following the instructions on the <a href="https://mesonbuild.com/Getting-meson.html">Meson website</a>.</p>
-<p>You can download a ready-to-use gtk-rust-template <a href="https://gitlab.gnome.org/bilelmoussaoui/gtk-rust-template">here</a>.
-Follow the instructions in the README to initialize your own application.
-Then configure your project.</p>
-<pre><code class="language-bash">meson setup builddir
-</code></pre>
-<p>In order to compile and install it run the following command.
-You have to execute it every time you modify your application.</p>
-<pre><code class="language-bash">meson install -C builddir
-</code></pre>
-<p>Now, the application should be in a folder included in your system path.
-You can either start it with the application launcher of your choice or from within your terminal.</p>
 
                     </main>
 
