--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </ul>
             <h1>Specific versions</h1>
             <ul>
+    <li><a href="stable/0.4/docs">0.4</a></li>
+
     <li><a href="stable/0.3/docs">0.3</a></li>
 
     <li><a href="stable/0.2/docs">0.2</a></li>
@@ -45,11 +47,11 @@
         <h2>Miscellaneous</h2>
         <section class="docblock">
             <ul>
-                <li><a href="https://github.com/gtk-rs/gtk4-rs">Repository</a></li>
+                <li><a href="https://github.com/ranfdev/gtk4-rs">Repository</a></li>
             </ul>
         </section>
         <footer>
-            Generated Tue Dec  7 16:58:58 2021 UTC
+            Generated Wed May  4 20:26:08 2022 UTC
         </footer>
     </body>
 </html>
