--- a/stable/latest/book/settings.html
+++ b/stable/latest/book/settings.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="gobject_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gobject_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="gobject_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="gobject_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="gobject_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="gobject_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html" class="active"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="composite_templates.html"><strong aria-hidden="true">10.</strong> Composite Templates</a></li><li class="chapter-item expanded "><a href="todo_app_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_app_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><a href="css.html"><strong aria-hidden="true">14.</strong> CSS</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="g_object_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="g_object_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="g_object_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="g_object_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="g_object_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="g_object_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html" class="active"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="composite_templates.html"><strong aria-hidden="true">10.</strong> Composite Templates</a></li><li class="chapter-item expanded "><a href="todo_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><a href="css.html"><strong aria-hidden="true">14.</strong> CSS</a></li><li class="chapter-item expanded "><a href="libadwaita.html"><strong aria-hidden="true">15.</strong> Libadwaita</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="todo_3.html"><strong aria-hidden="true">15.1.</strong> Let To-Do App use Libadwaita</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">15.2.</strong> Make To-Do App Adaptive</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,10 +143,10 @@
 However, every time we close the application all of it is gone.
 Let's learn how to use <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.Settings.html"><code>gio::Settings</code></a> by storing the state of a <a href="../docs/gtk4/struct.Switch.html"><code>Switch</code></a> in it.</p>
 <p>At the very beginning we have to create a <code>GSchema</code> xml file in order to describe the kind of data our application plans to store in the settings.</p>
-<p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/org.gtk-rs.example.gschema.xml">listings/settings/1/org.gtk-rs.example.gschema.xml</a></p>
+<p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/org.gtk_rs.Settings1.gschema.xml">listings/settings/1/org.gtk_rs.Settings1.gschema.xml</a></p>
 <pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot;?&gt;
 &lt;schemalist&gt;
-  &lt;schema id=&quot;org.gtk-rs.example&quot; path=&quot;/org/gtk-rs/example/&quot;&gt;
+  &lt;schema id=&quot;org.gtk_rs.Settings1&quot; path=&quot;/org/gtk_rs/Settings1/&quot;&gt;
     &lt;key name=&quot;is-switch-enabled&quot; type=&quot;b&quot;&gt;
       &lt;default&gt;false&lt;/default&gt;
       &lt;summary&gt;Default switch state&lt;/summary&gt;
@@ -158,15 +158,15 @@ Let's learn how to use <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/doc
 The <code>id</code> is the same application id we used when we created our application.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::gio;
-</span><span class="boring">use gtk::{glib::signal::Inhibit, prelude::*};
-</span><span class="boring">use gtk::{Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">use gtk::glib::signal::Inhibit;
+</span><span class="boring">use gtk::prelude::*;
+</span><span class="boring">use gtk::{gio, Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">
+</span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.Settings1&quot;;
 </span><span class="boring">
 </span><span class="boring">fn main() {
 </span>    // Create a new application
-    let app = Application::builder()
-        .application_id(&quot;org.gtk-rs.example&quot;)
-        .build();
+    let app = Application::builder().application_id(APP_ID).build();
 <span class="boring">
 </span><span class="boring">    // Connect to &quot;activate&quot; signal of `app`
 </span><span class="boring">    app.connect_activate(build_ui);
@@ -177,7 +177,7 @@ The <code>id</code> is the same application id we used when we created our appli
 </span><span class="boring">
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span><span class="boring">    // Initialize settings
-</span><span class="boring">    let settings = Settings::new(&quot;org.gtk-rs.example&quot;);
+</span><span class="boring">    let settings = Settings::new(APP_ID);
 </span><span class="boring">
 </span><span class="boring">    // Get the last switch state from the settings
 </span><span class="boring">    let is_switch_enabled = settings.boolean(&quot;is-switch-enabled&quot;);
@@ -223,27 +223,27 @@ Finally, we add a summary.</p>
 <blockquote>
 <p>You can install the schema by executing the following commands on a Linux or macOS machine:</p>
 <pre><code class="language-bash">mkdir -p $HOME/.local/share/glib-2.0/schemas
-cp org.gtk-rs.example.gschema.xml $HOME/.local/share/glib-2.0/schemas/
+cp org.gtk_rs.Settings1.gschema.xml $HOME/.local/share/glib-2.0/schemas/
 glib-compile-schemas $HOME/.local/share/glib-2.0/schemas/
 </code></pre>
 <p>On Windows run:</p>
 <pre><code class="language-powershell">mkdir C:/ProgramData/glib-2.0/schemas/
-cp org.gtk-rs.example.gschema.xml C:/ProgramData/glib-2.0/schemas/
+cp org.gtk_rs.Settings1.gschema.xml C:/ProgramData/glib-2.0/schemas/
 glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </code></pre>
 </blockquote>
 <p>We initialize the <code>Settings</code> object by specifying the application id.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::gio;
-</span><span class="boring">use gtk::{glib::signal::Inhibit, prelude::*};
-</span><span class="boring">use gtk::{Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">use gtk::glib::signal::Inhibit;
+</span><span class="boring">use gtk::prelude::*;
+</span><span class="boring">use gtk::{gio, Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">
+</span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.Settings1&quot;;
 </span><span class="boring">
 </span><span class="boring">fn main() {
 </span><span class="boring">    // Create a new application
-</span><span class="boring">    let app = Application::builder()
-</span><span class="boring">        .application_id(&quot;org.gtk-rs.example&quot;)
-</span><span class="boring">        .build();
+</span><span class="boring">    let app = Application::builder().application_id(APP_ID).build();
 </span><span class="boring">
 </span><span class="boring">    // Connect to &quot;activate&quot; signal of `app`
 </span><span class="boring">    app.connect_activate(build_ui);
@@ -254,7 +254,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </span><span class="boring">
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span>    // Initialize settings
-    let settings = Settings::new(&quot;org.gtk-rs.example&quot;);
+    let settings = Settings::new(APP_ID);
 <span class="boring">
 </span><span class="boring">    // Get the last switch state from the settings
 </span><span class="boring">    let is_switch_enabled = settings.boolean(&quot;is-switch-enabled&quot;);
@@ -293,15 +293,15 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 <p>Then we get the settings key and use it when we create our <code>Switch</code>.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::gio;
-</span><span class="boring">use gtk::{glib::signal::Inhibit, prelude::*};
-</span><span class="boring">use gtk::{Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">use gtk::glib::signal::Inhibit;
+</span><span class="boring">use gtk::prelude::*;
+</span><span class="boring">use gtk::{gio, Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">
+</span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.Settings1&quot;;
 </span><span class="boring">
 </span><span class="boring">fn main() {
 </span><span class="boring">    // Create a new application
-</span><span class="boring">    let app = Application::builder()
-</span><span class="boring">        .application_id(&quot;org.gtk-rs.example&quot;)
-</span><span class="boring">        .build();
+</span><span class="boring">    let app = Application::builder().application_id(APP_ID).build();
 </span><span class="boring">
 </span><span class="boring">    // Connect to &quot;activate&quot; signal of `app`
 </span><span class="boring">    app.connect_activate(build_ui);
@@ -312,7 +312,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </span><span class="boring">
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span><span class="boring">    // Initialize settings
-</span><span class="boring">    let settings = Settings::new(&quot;org.gtk-rs.example&quot;);
+</span><span class="boring">    let settings = Settings::new(APP_ID);
 </span><span class="boring">
 </span>    // Get the last switch state from the settings
     let is_switch_enabled = settings.boolean(&quot;is-switch-enabled&quot;);
@@ -351,15 +351,15 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 <p>Finally, we assure that the switch state is stored in the settings whenever we click on it.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::gio;
-</span><span class="boring">use gtk::{glib::signal::Inhibit, prelude::*};
-</span><span class="boring">use gtk::{Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">use gtk::glib::signal::Inhibit;
+</span><span class="boring">use gtk::prelude::*;
+</span><span class="boring">use gtk::{gio, Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">
+</span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.Settings1&quot;;
 </span><span class="boring">
 </span><span class="boring">fn main() {
 </span><span class="boring">    // Create a new application
-</span><span class="boring">    let app = Application::builder()
-</span><span class="boring">        .application_id(&quot;org.gtk-rs.example&quot;)
-</span><span class="boring">        .build();
+</span><span class="boring">    let app = Application::builder().application_id(APP_ID).build();
 </span><span class="boring">
 </span><span class="boring">    // Connect to &quot;activate&quot; signal of `app`
 </span><span class="boring">    app.connect_activate(build_ui);
@@ -370,7 +370,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </span><span class="boring">
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span><span class="boring">    // Initialize settings
-</span><span class="boring">    let settings = Settings::new(&quot;org.gtk-rs.example&quot;);
+</span><span class="boring">    let settings = Settings::new(APP_ID);
 </span><span class="boring">
 </span><span class="boring">    // Get the last switch state from the settings
 </span><span class="boring">    let is_switch_enabled = settings.boolean(&quot;is-switch-enabled&quot;);
@@ -421,15 +421,14 @@ We then bind the setting to the property by specifying the key, object and name 
 Additionally, we specify <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.SettingsBindFlags.html"><code>SettingsBindFlags</code></a> to control the direction in which the binding works.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/2/main.rs">listings/settings/2/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::{Settings, SettingsBindFlags};
-</span><span class="boring">use gtk::gio;
 </span><span class="boring">use gtk::prelude::*;
-</span><span class="boring">use gtk::{Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">use gtk::{gio, Align, Application, ApplicationWindow, Switch};
+</span><span class="boring">
+</span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.Settings2&quot;;
 </span><span class="boring">
 </span><span class="boring">fn main() {
 </span><span class="boring">    // Create a new application
-</span><span class="boring">    let app = Application::builder()
-</span><span class="boring">        .application_id(&quot;org.gtk-rs.example&quot;)
-</span><span class="boring">        .build();
+</span><span class="boring">    let app = Application::builder().application_id(APP_ID).build();
 </span><span class="boring">
 </span><span class="boring">    // Connect to &quot;activate&quot; signal of `app`
 </span><span class="boring">    app.connect_activate(build_ui);
@@ -440,7 +439,7 @@ Additionally, we specify <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/d
 </span><span class="boring">
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span><span class="boring">    // Initialize settings
-</span><span class="boring">    let settings = Settings::new(&quot;org.gtk-rs.example&quot;);
+</span><span class="boring">    let settings = Settings::new(APP_ID);
 </span><span class="boring">
 </span><span class="boring">    // Create a switch
 </span><span class="boring">    let switch = Switch::builder()
