--- a/stable/latest/book/saving_window_state.html
+++ b/stable/latest/book/saving_window_state.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="gobject_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gobject_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="gobject_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="gobject_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="gobject_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="gobject_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html" class="active"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="composite_templates.html"><strong aria-hidden="true">10.</strong> Composite Templates</a></li><li class="chapter-item expanded "><a href="todo_app_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_app_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><a href="css.html"><strong aria-hidden="true">14.</strong> CSS</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation_linux.html"><strong aria-hidden="true">1.1.</strong> Linux</a></li><li class="chapter-item expanded "><a href="installation_macos.html"><strong aria-hidden="true">1.2.</strong> macOS</a></li><li class="chapter-item expanded "><a href="installation_windows.html"><strong aria-hidden="true">1.3.</strong> Windows</a></li></ol></li><li class="chapter-item expanded "><a href="project_setup.html"><strong aria-hidden="true">2.</strong> Project Setup</a></li><li class="chapter-item expanded "><a href="hello_world.html"><strong aria-hidden="true">3.</strong> Hello World!</a></li><li class="chapter-item expanded "><a href="widgets.html"><strong aria-hidden="true">4.</strong> Widgets</a></li><li class="chapter-item expanded "><a href="g_object_concepts.html"><strong aria-hidden="true">5.</strong> GObject Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="g_object_memory_management.html"><strong aria-hidden="true">5.1.</strong> Memory Management</a></li><li class="chapter-item expanded "><a href="g_object_subclassing.html"><strong aria-hidden="true">5.2.</strong> Subclassing</a></li><li class="chapter-item expanded "><a href="g_object_values.html"><strong aria-hidden="true">5.3.</strong> Generic Values</a></li><li class="chapter-item expanded "><a href="g_object_properties.html"><strong aria-hidden="true">5.4.</strong> Properties</a></li><li class="chapter-item expanded "><a href="g_object_signals.html"><strong aria-hidden="true">5.5.</strong> Signals</a></li></ol></li><li class="chapter-item expanded "><a href="main_event_loop.html"><strong aria-hidden="true">6.</strong> The Main Event Loop</a></li><li class="chapter-item expanded "><a href="settings.html"><strong aria-hidden="true">7.</strong> Settings</a></li><li class="chapter-item expanded "><a href="saving_window_state.html" class="active"><strong aria-hidden="true">8.</strong> Saving Window State</a></li><li class="chapter-item expanded "><a href="list_widgets.html"><strong aria-hidden="true">9.</strong> List Widgets</a></li><li class="chapter-item expanded "><a href="composite_templates.html"><strong aria-hidden="true">10.</strong> Composite Templates</a></li><li class="chapter-item expanded "><a href="todo_1.html"><strong aria-hidden="true">11.</strong> Building a Simple To-Do App</a></li><li class="chapter-item expanded "><a href="actions.html"><strong aria-hidden="true">12.</strong> Actions</a></li><li class="chapter-item expanded "><a href="todo_2.html"><strong aria-hidden="true">13.</strong> Manipulating State of To-Do App</a></li><li class="chapter-item expanded "><a href="css.html"><strong aria-hidden="true">14.</strong> CSS</a></li><li class="chapter-item expanded "><a href="libadwaita.html"><strong aria-hidden="true">15.</strong> Libadwaita</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="todo_3.html"><strong aria-hidden="true">15.1.</strong> Let To-Do App use Libadwaita</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">15.2.</strong> Make To-Do App Adaptive</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,10 +144,10 @@ If the user resizes or maximizes the window, they might expect to find it in the
 GTK does not provide this functionality out of the box, but luckily it is not too hard to manually implement it.
 We basically want two integers (<code>height</code> &amp; <code>width</code>) and a boolean (<code>is_maximized</code>) to persist.
 We already know how to do this by using <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.Settings.html"><code>gio::Settings</code></a>.</p>
-<p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/saving_window_state/1/org.gtk-rs.example.gschema.xml">listings/saving_window_state/1/org.gtk-rs.example.gschema.xml</a></p>
+<p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/saving_window_state/1/org.gtk_rs.SavingWindowState1.gschema.xml">listings/saving_window_state/1/org.gtk_rs.SavingWindowState1.gschema.xml</a></p>
 <pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot;?&gt;
 &lt;schemalist&gt;
-  &lt;schema id=&quot;org.gtk-rs.example&quot; path=&quot;/org/gtk-rs/example/&quot;&gt;
+  &lt;schema id=&quot;org.gtk_rs.SavingWindowState1&quot; path=&quot;/org/gtk_rs/SavingWindowState1/&quot;&gt;
     &lt;key name=&quot;window-width&quot; type=&quot;i&quot;&gt;
       &lt;default&gt;-1&lt;/default&gt;
       &lt;summary&gt;Default window width&lt;/summary&gt;
@@ -165,15 +165,17 @@ We already know how to do this by using <a href="https://gtk-rs.org/gtk-rs-core/
 </code></pre>
 <p>Since we don't care about intermediate state, we only load the window state when the window is constructed and save it when we close the window.
 That can be done by creating a custom window.
-First, we create one and add methods for getting and setting the window state.</p>
+First, we create one and add convenience methods for accessing settings as well as the window state.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/saving_window_state/1/custom_window/mod.rs">listings/saving_window_state/1/custom_window/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod imp;
 </span><span class="boring">
+</span><span class="boring">use gio::Settings;
 </span><span class="boring">use glib::Object;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
-</span><span class="boring">use gtk::Application;
-</span><span class="boring">use gtk::{gio, glib};
+</span><span class="boring">use gtk::{gio, glib, Application};
+</span><span class="boring">
+</span><span class="boring">use crate::APP_ID;
 </span><span class="boring">
 </span>glib::wrapper! {
     pub struct Window(ObjectSubclass&lt;imp::Window&gt;)
@@ -188,29 +190,36 @@ impl Window {
         Object::new(&amp;[(&quot;application&quot;, app)]).expect(&quot;Failed to create `Window`.&quot;)
     }
 
-    pub fn save_window_size(&amp;self) -&gt; Result&lt;(), glib::BoolError&gt; {
-        // Get `settings` from `imp::Window`
-        let settings = &amp;self.imp().settings;
+    fn setup_settings(&amp;self) {
+        let settings = Settings::new(APP_ID);
+        self.imp()
+            .settings
+            .set(settings)
+            .expect(&quot;Could not set `Settings`.&quot;);
+    }
 
+    fn settings(&amp;self) -&gt; &amp;Settings {
+        self.imp().settings.get().expect(&quot;Could not get settings.&quot;)
+    }
+
+    pub fn save_window_size(&amp;self) -&gt; Result&lt;(), glib::BoolError&gt; {
         // Get the size of the window
         let size = self.default_size();
 
         // Set the window state in `settings`
-        settings.set_int(&quot;window-width&quot;, size.0)?;
-        settings.set_int(&quot;window-height&quot;, size.1)?;
-        settings.set_boolean(&quot;is-maximized&quot;, self.is_maximized())?;
+        self.settings().set_int(&quot;window-width&quot;, size.0)?;
+        self.settings().set_int(&quot;window-height&quot;, size.1)?;
+        self.settings()
+            .set_boolean(&quot;is-maximized&quot;, self.is_maximized())?;
 
         Ok(())
     }
 
     fn load_window_size(&amp;self) {
-        // Get `settings` from `imp::Window`
-        let settings = &amp;self.imp().settings;
-
         // Get the window state from `settings`
-        let width = settings.int(&quot;window-width&quot;);
-        let height = settings.int(&quot;window-height&quot;);
-        let is_maximized = settings.boolean(&quot;is-maximized&quot;);
+        let width = self.settings().int(&quot;window-width&quot;);
+        let height = self.settings().int(&quot;window-height&quot;);
+        let is_maximized = self.settings().boolean(&quot;is-maximized&quot;);
 
         // Set the size of the window
         self.set_default_size(width, height);
@@ -232,11 +241,13 @@ We also override the <code>constructed</code> and <code>close_request</code> met
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/saving_window_state/1/custom_window/imp.rs">listings/saving_window_state/1/custom_window/imp.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
 </span><span class="boring">use glib::signal::Inhibit;
-</span><span class="boring">use gtk::{gio, glib};
-</span><span class="boring">use gtk::{subclass::prelude::*, ApplicationWindow};
+</span><span class="boring">use gtk::subclass::prelude::*;
+</span><span class="boring">use gtk::{gio, glib, ApplicationWindow};
+</span><span class="boring">use once_cell::sync::OnceCell;
 </span><span class="boring">
-</span>pub struct Window {
-    pub settings: Settings,
+</span>#[derive(Default)]
+pub struct Window {
+    pub settings: OnceCell&lt;Settings&gt;,
 }
 
 #[glib::object_subclass]
@@ -244,17 +255,12 @@ impl ObjectSubclass for Window {
     const NAME: &amp;'static str = &quot;MyGtkAppWindow&quot;;
     type Type = super::Window;
     type ParentType = ApplicationWindow;
-
-    fn new() -&gt; Self {
-        Self {
-            settings: Settings::new(&quot;org.gtk-rs.example&quot;),
-        }
-    }
 }
 impl ObjectImpl for Window {
     fn constructed(&amp;self, obj: &amp;Self::Type) {
         self.parent_constructed(obj);
         // Load latest window state
+        obj.setup_settings();
         obj.load_window_size();
     }
 }
